flicker fix 4

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,8 @@ body::-webkit-scrollbar {
     background-repeat: no-repeat;
     background-position: center;
     
-    inset: 0;
+    height: 100vh;
+    width: 100vw;
 
     z-index: -1;
 }
